# muvik-rate-extraction

./: .env  .env.example  MIGRATION_GUIDE.md  RATE_LIMITING_SOLUTION.md  README.md  maersk-rates.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run-claude-extraction.js  setup.js  test_chromium_login.py
muvik_rate_extraction.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  maersk-claude-extraction.js  main.js  main.py  test-login.js
src/carriers/: __init__.py  base.py  maersk.js  maersk.py
src/examples/: advanced-automation.js  browser-use-test.js  claude-test.js  simple-agent-demo.js  test-rate-extraction.js
src/models/: booking.js  booking.py
src/utils/: logger.js
