[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muvik-rate-extraction"
version = "0.1.0"
authors = [
  { name="Muvik Team" },
]
description = "Automated rate extraction tool for Muvik"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false 